# libvirt-mgr

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  requirements.txt  setup.cfg
.github/workflows/: pytest.yml
.run/: pytest.run.xml  virtmgr.run.xml
examples/: config.toml
libvirt_mgr/: migrate.py  virtmgr.py
libvirt_mgr/utils/: __init__.py  config.py  libvirt.py
test/: test_migrate.py  test_utils.py
