[metadata]
name = libvirt-mgr
version = 0.0.1
description = Minimal management scripts for libvirt
long_description = file: README.md, LICENSE
author = Andrei Costescu
url = https://github.com/cosandr/libvirt-mgr
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
install_requires =
    toml;python_version<'3.11'

[options.entry_points]
console_scripts =
    virtmgr = libvirt_mgr.virtmgr:main
